Returning Scraped Data for all top Repos for the topic 3D using a for loop

--- a/github_topics_scraping.ipynb
+++ b/github_topics_scraping.ipynb
@@ -1428,16 +1428,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6b677ba",
+   "id": "451200d2",
    "metadata": {},
    "source": [
-    "#### Creating a function that returns all required data for a specific repo."
+    "##### Creating a function that returns all required data for a specific repo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "71dcd110",
+   "execution_count": 103,
+   "id": "13bb0414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1447,23 +1447,23 @@
     "    username = a_tags[0].text.strip()\n",
     "    repo_name = a_tags[1].text.strip()\n",
     "    repo_url = base_url + a_tags[1]['href']\n",
-    "    star_count = parse_star_count(star_tag.text.strip())\n",
-    "    return username, repo_name, repo_url, star_count"
+    "    stars = parse_star_count(star_tag.text.strip())\n",
+    "    return username, repo_name, stars, repo_url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "57f46039",
+   "execution_count": 99,
+   "id": "0bc92739",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('mrdoob', 'three.js', 'https://github.com/mrdoob/three.js', 97600)"
+       "('mrdoob', 'three.js', 97600, 'https://github.com/mrdoob/three.js')"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1473,41 +1473,382 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec8c3351",
+   "metadata": {},
+   "source": [
+    "##### Returning Scraped Data for all top Repos for the topic 3D using a for loop "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "99ba3227",
+   "execution_count": 100,
+   "id": "01d64030",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "topic_repos_dict = {\n",
+    "    'username':[],\n",
+    "    'repo_name':[],\n",
+    "    'stars':[],\n",
+    "    'repo_url':[]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "for i in range (len(repo_tags)):\n",
+    "    repo_info = get_rep_info(repo_tags[i], star_tags[i])\n",
+    "    topic_repos_dict['username'].append(repo_info[0])\n",
+    "    topic_repos_dict['repo_name'].append(repo_info[1])\n",
+    "    topic_repos_dict['stars'].append(repo_info[2])\n",
+    "    topic_repos_dict['repo_url'].append(repo_info[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "048f7eed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'username': ['mrdoob',\n",
+       "  'pmndrs',\n",
+       "  'libgdx',\n",
+       "  'BabylonJS',\n",
+       "  'ssloy',\n",
+       "  'FreeCAD',\n",
+       "  'lettier',\n",
+       "  'aframevr',\n",
+       "  'CesiumGS',\n",
+       "  'blender',\n",
+       "  'MonoGame',\n",
+       "  'metafizzy',\n",
+       "  'isl-org',\n",
+       "  'timzhang642',\n",
+       "  'nerfstudio-project',\n",
+       "  'a1studmuffin',\n",
+       "  'domlysz',\n",
+       "  'FyroxEngine',\n",
+       "  'google',\n",
+       "  'openscad'],\n",
+       " 'repo_name': ['three.js',\n",
+       "  'react-three-fiber',\n",
+       "  'libgdx',\n",
+       "  'Babylon.js',\n",
+       "  'tinyrenderer',\n",
+       "  'FreeCAD',\n",
+       "  '3d-game-shaders-for-beginners',\n",
+       "  'aframe',\n",
+       "  'cesium',\n",
+       "  'blender',\n",
+       "  'MonoGame',\n",
+       "  'zdog',\n",
+       "  'Open3D',\n",
+       "  '3D-Machine-Learning',\n",
+       "  'nerfstudio',\n",
+       "  'SpaceshipGenerator',\n",
+       "  'BlenderGIS',\n",
+       "  'Fyrox',\n",
+       "  'model-viewer',\n",
+       "  'openscad'],\n",
+       " 'stars': [97600,\n",
+       "  25300,\n",
+       "  22500,\n",
+       "  22100,\n",
+       "  18900,\n",
+       "  16900,\n",
+       "  16800,\n",
+       "  16000,\n",
+       "  11600,\n",
+       "  10900,\n",
+       "  10600,\n",
+       "  10200,\n",
+       "  10200,\n",
+       "  9400,\n",
+       "  8100,\n",
+       "  7500,\n",
+       "  7100,\n",
+       "  7000,\n",
+       "  6400,\n",
+       "  6300],\n",
+       " 'repo_url': ['https://github.com/mrdoob/three.js',\n",
+       "  'https://github.com/pmndrs/react-three-fiber',\n",
+       "  'https://github.com/libgdx/libgdx',\n",
+       "  'https://github.com/BabylonJS/Babylon.js',\n",
+       "  'https://github.com/ssloy/tinyrenderer',\n",
+       "  'https://github.com/FreeCAD/FreeCAD',\n",
+       "  'https://github.com/lettier/3d-game-shaders-for-beginners',\n",
+       "  'https://github.com/aframevr/aframe',\n",
+       "  'https://github.com/CesiumGS/cesium',\n",
+       "  'https://github.com/blender/blender',\n",
+       "  'https://github.com/MonoGame/MonoGame',\n",
+       "  'https://github.com/metafizzy/zdog',\n",
+       "  'https://github.com/isl-org/Open3D',\n",
+       "  'https://github.com/timzhang642/3D-Machine-Learning',\n",
+       "  'https://github.com/nerfstudio-project/nerfstudio',\n",
+       "  'https://github.com/a1studmuffin/SpaceshipGenerator',\n",
+       "  'https://github.com/domlysz/BlenderGIS',\n",
+       "  'https://github.com/FyroxEngine/Fyrox',\n",
+       "  'https://github.com/google/model-viewer',\n",
+       "  'https://github.com/openscad/openscad']}"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topic_repos_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed476698",
+   "metadata": {},
+   "source": [
+    "###### Converting to a DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "49a210af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>username</th>\n",
+       "      <th>repo_name</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>repo_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mrdoob</td>\n",
+       "      <td>three.js</td>\n",
+       "      <td>97600</td>\n",
+       "      <td>https://github.com/mrdoob/three.js</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pmndrs</td>\n",
+       "      <td>react-three-fiber</td>\n",
+       "      <td>25300</td>\n",
+       "      <td>https://github.com/pmndrs/react-three-fiber</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>libgdx</td>\n",
+       "      <td>libgdx</td>\n",
+       "      <td>22500</td>\n",
+       "      <td>https://github.com/libgdx/libgdx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BabylonJS</td>\n",
+       "      <td>Babylon.js</td>\n",
+       "      <td>22100</td>\n",
+       "      <td>https://github.com/BabylonJS/Babylon.js</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ssloy</td>\n",
+       "      <td>tinyrenderer</td>\n",
+       "      <td>18900</td>\n",
+       "      <td>https://github.com/ssloy/tinyrenderer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>FreeCAD</td>\n",
+       "      <td>FreeCAD</td>\n",
+       "      <td>16900</td>\n",
+       "      <td>https://github.com/FreeCAD/FreeCAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>lettier</td>\n",
+       "      <td>3d-game-shaders-for-beginners</td>\n",
+       "      <td>16800</td>\n",
+       "      <td>https://github.com/lettier/3d-game-shaders-for...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>aframevr</td>\n",
+       "      <td>aframe</td>\n",
+       "      <td>16000</td>\n",
+       "      <td>https://github.com/aframevr/aframe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CesiumGS</td>\n",
+       "      <td>cesium</td>\n",
+       "      <td>11600</td>\n",
+       "      <td>https://github.com/CesiumGS/cesium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>blender</td>\n",
+       "      <td>blender</td>\n",
+       "      <td>10900</td>\n",
+       "      <td>https://github.com/blender/blender</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>MonoGame</td>\n",
+       "      <td>MonoGame</td>\n",
+       "      <td>10600</td>\n",
+       "      <td>https://github.com/MonoGame/MonoGame</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>metafizzy</td>\n",
+       "      <td>zdog</td>\n",
+       "      <td>10200</td>\n",
+       "      <td>https://github.com/metafizzy/zdog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>isl-org</td>\n",
+       "      <td>Open3D</td>\n",
+       "      <td>10200</td>\n",
+       "      <td>https://github.com/isl-org/Open3D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>timzhang642</td>\n",
+       "      <td>3D-Machine-Learning</td>\n",
+       "      <td>9400</td>\n",
+       "      <td>https://github.com/timzhang642/3D-Machine-Lear...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>nerfstudio-project</td>\n",
+       "      <td>nerfstudio</td>\n",
+       "      <td>8100</td>\n",
+       "      <td>https://github.com/nerfstudio-project/nerfstudio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>a1studmuffin</td>\n",
+       "      <td>SpaceshipGenerator</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>https://github.com/a1studmuffin/SpaceshipGener...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>domlysz</td>\n",
+       "      <td>BlenderGIS</td>\n",
+       "      <td>7100</td>\n",
+       "      <td>https://github.com/domlysz/BlenderGIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>FyroxEngine</td>\n",
+       "      <td>Fyrox</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>https://github.com/FyroxEngine/Fyrox</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>google</td>\n",
+       "      <td>model-viewer</td>\n",
+       "      <td>6400</td>\n",
+       "      <td>https://github.com/google/model-viewer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>openscad</td>\n",
+       "      <td>openscad</td>\n",
+       "      <td>6300</td>\n",
+       "      <td>https://github.com/openscad/openscad</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              username                      repo_name  stars  \\\n",
+       "0               mrdoob                       three.js  97600   \n",
+       "1               pmndrs              react-three-fiber  25300   \n",
+       "2               libgdx                         libgdx  22500   \n",
+       "3            BabylonJS                     Babylon.js  22100   \n",
+       "4                ssloy                   tinyrenderer  18900   \n",
+       "5              FreeCAD                        FreeCAD  16900   \n",
+       "6              lettier  3d-game-shaders-for-beginners  16800   \n",
+       "7             aframevr                         aframe  16000   \n",
+       "8             CesiumGS                         cesium  11600   \n",
+       "9              blender                        blender  10900   \n",
+       "10            MonoGame                       MonoGame  10600   \n",
+       "11           metafizzy                           zdog  10200   \n",
+       "12             isl-org                         Open3D  10200   \n",
+       "13         timzhang642            3D-Machine-Learning   9400   \n",
+       "14  nerfstudio-project                     nerfstudio   8100   \n",
+       "15        a1studmuffin             SpaceshipGenerator   7500   \n",
+       "16             domlysz                     BlenderGIS   7100   \n",
+       "17         FyroxEngine                          Fyrox   7000   \n",
+       "18              google                   model-viewer   6400   \n",
+       "19            openscad                       openscad   6300   \n",
+       "\n",
+       "                                             repo_url  \n",
+       "0                  https://github.com/mrdoob/three.js  \n",
+       "1         https://github.com/pmndrs/react-three-fiber  \n",
+       "2                    https://github.com/libgdx/libgdx  \n",
+       "3             https://github.com/BabylonJS/Babylon.js  \n",
+       "4               https://github.com/ssloy/tinyrenderer  \n",
+       "5                  https://github.com/FreeCAD/FreeCAD  \n",
+       "6   https://github.com/lettier/3d-game-shaders-for...  \n",
+       "7                  https://github.com/aframevr/aframe  \n",
+       "8                  https://github.com/CesiumGS/cesium  \n",
+       "9                  https://github.com/blender/blender  \n",
+       "10               https://github.com/MonoGame/MonoGame  \n",
+       "11                  https://github.com/metafizzy/zdog  \n",
+       "12                  https://github.com/isl-org/Open3D  \n",
+       "13  https://github.com/timzhang642/3D-Machine-Lear...  \n",
+       "14   https://github.com/nerfstudio-project/nerfstudio  \n",
+       "15  https://github.com/a1studmuffin/SpaceshipGener...  \n",
+       "16              https://github.com/domlysz/BlenderGIS  \n",
+       "17               https://github.com/FyroxEngine/Fyrox  \n",
+       "18             https://github.com/google/model-viewer  \n",
+       "19               https://github.com/openscad/openscad  "
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topic_repos_df = pd.DataFrame(topic_repos_dict)\n",
+    "topic_repos_df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3123e60b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1850b4e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5192651",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abf4f920",
+   "id": "9894fee7",
    "metadata": {},
    "outputs": [],
    "source": []
