--- a/ScrapingGithubTopicsRepositories.ipynb
+++ b/ScrapingGithubTopicsRepositories.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "c44b2684",
    "metadata": {},
    "outputs": [],
@@ -78,6 +78,7 @@
     "    # Checking the status of the page (response)\n",
     "    if response.status_code != 200:\n",
     "        raise Exception('Failed to load page{}', format(topic_url))\n",
+    "        \n",
     "    #parse using BeautifulSoup\n",
     "    doc = BeautifulSoup(response.text, 'html.parser')\n",
     "    return doc"
@@ -85,8 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "554119e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = get_topic_page()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3a46329e",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +106,7 @@
        "bs4.BeautifulSoup"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "cd11f590",
    "metadata": {},
    "outputs": [],
@@ -148,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "fbbbc675",
    "metadata": {},
    "outputs": [
@@ -158,7 +169,7 @@
        "30"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "1ab7f482",
    "metadata": {},
    "outputs": [
@@ -180,7 +191,7 @@
        "['3D', 'Ajax', 'Algorithm', 'Amp', 'Android']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,8 +209,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a22ad349",
+   "metadata": {},
+   "source": [
+    "Extracting the topic descriptions: example and  instance demonstration"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "120128f3",
    "metadata": {},
    "outputs": [],
@@ -215,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "4e26005c",
    "metadata": {},
    "outputs": [],
@@ -225,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "77da9d1f",
    "metadata": {},
    "outputs": [
@@ -239,7 +258,7 @@
        " 'Android is an operating system built by Google designed for mobile devices.']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,16 +268,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74ccff2f",
+   "cell_type": "markdown",
+   "id": "3a5bd9d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Extracting the topic Urls: example and instance demonstration"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "b8963eff",
    "metadata": {},
    "outputs": [],
@@ -274,16 +293,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "id": "eea6cffc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links = get_topic_urls(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "99a252f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://github.com/topics/3d',\n",
+       " 'https://github.com/topics/ajax',\n",
+       " 'https://github.com/topics/algorithm']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1370d789",
+   "metadata": {},
+   "source": [
+    "#### Combining the above Titles, Descriptions and Urls functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "8a788ffb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "1a41795d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scrape_topics():\n",
+    "    topics_url = 'https://github.com/topics'\n",
+    "    response = requests.get(topics_url)\n",
+    "    if response.status_code != 200:\n",
+    "        raise Exception('Failed to load page {}'.format(topic_url))\n",
+    "    topics_dict = {\n",
+    "        'title': get_topic_titles(doc),\n",
+    "        'description': get_topic_descs(doc),\n",
+    "        'url': get_topic_urls(doc)\n",
+    "    }\n",
+    "    topics_df = pd.DataFrame(topics_dict)\n",
+    "    return topics_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2ecf9d39",
+   "id": "35cbda97",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "96872039",
+   "metadata": {},
+   "source": [
+    "### Extracting the top 25 repositories in the topic from the topic page."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce10292b",
+   "id": "7af9d063",
    "metadata": {},
    "outputs": [],
    "source": []
