--- a/ScrapingGithubTopicsRepositories.ipynb
+++ b/ScrapingGithubTopicsRepositories.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "c44b2684",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "554119e7",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "3a46329e",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "bs4.BeautifulSoup"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "cd11f590",
    "metadata": {},
    "outputs": [],
@@ -159,21 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "fbbbc675",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "titles = get_topic_titles(doc)\n",
     "len(titles)"
@@ -181,21 +170,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "1ab7f482",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['3D', 'Ajax', 'Algorithm', 'Amp', 'Android']"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "titles[:5]"
    ]
@@ -218,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "120128f3",
    "metadata": {},
    "outputs": [],
@@ -234,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "4e26005c",
    "metadata": {},
    "outputs": [],
@@ -244,25 +222,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "77da9d1f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['3D refers to the use of three-dimensional graphics, modeling, and animation in various industries.',\n",
-       " 'Ajax is a technique for creating interactive web applications.',\n",
-       " 'Algorithms are self-contained sequences that carry out a variety of tasks.',\n",
-       " 'Amp is a non-blocking concurrency library for PHP.',\n",
-       " 'Android is an operating system built by Google designed for mobile devices.']"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "description[:5]"
    ]
@@ -277,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "b8963eff",
    "metadata": {},
    "outputs": [],
@@ -293,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "eea6cffc",
    "metadata": {},
    "outputs": [],
@@ -303,23 +266,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "99a252f6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://github.com/topics/3d',\n",
-       " 'https://github.com/topics/ajax',\n",
-       " 'https://github.com/topics/algorithm']"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "links[:3]"
    ]
@@ -334,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "8a788ffb",
    "metadata": {},
    "outputs": [],
@@ -344,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "1a41795d",
    "metadata": {},
    "outputs": [],
@@ -364,14 +314,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35cbda97",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "96872039",
    "metadata": {},
@@ -380,9 +322,259 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5edeadf7",
+   "metadata": {},
+   "source": [
+    "#### TO_DO: Extract a topic"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7af9d063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_topic_page(topic_url):\n",
+    "    # download the page\n",
+    "    response = requests.get(topic_url)\n",
+    "    # Checking the status of the page (response)\n",
+    "    if response.status_code != 200:\n",
+    "        raise Exception('Failed to load page{}', format(topic_url))\n",
+    "    #parse using beautifulSoup\n",
+    "    topic_doc = BeautifulSoup(response.text, 'html.parser')\n",
+    "    return topic_doc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea4dfb8d",
+   "metadata": {},
+   "source": [
+    "Example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37556391",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = get_topic_page('https://github.com/topics/3d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f062f7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc.find_all('h3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44b505a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "365a3adc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6259f4a",
+   "metadata": {},
+   "source": [
+    "#### TO_DO: return h3 text from the topic extracted in the doc above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c90bb9a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def get_rep_info(h3_tag, star_tag):\n",
+    "    #returns all the required information about a repository\n",
+    "    a_tags = h3_tag.find_all('a')\n",
+    "    username = a_tags[0].text.strip()\n",
+    "    repo_name = a_tags[1].text.strip()\n",
+    "    repo_url = base_url + a_tags[1]['href']\n",
+    "    stars = parse_star_count(star_tag.text.strip())\n",
+    "    return username, repo_name, stars, repo_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3316038c",
+   "metadata": {},
+   "source": [
+    "Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67d81c6f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "414a0394",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ded49752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def get_topic_repos(topic_doc):\n",
+    "    # Get the h3 tags containing repo title, repo URL and username\n",
+    "    h3_selection_class = 'f3 color-fg-muted text-normal lh-condensed'\n",
+    "    repo_tags = topic_doc.find_all('h3', {'class':h3_selection_class} )\n",
+    "     # Get star tags\n",
+    "    star_tags = topic_doc.find_all('span', id='repo-stars-counter-star')\n",
+    "    \n",
+    "    topic_repos_dict = {\n",
+    "        'username':[],\n",
+    "        'repo_name':[],\n",
+    "        'stars':[],\n",
+    "        'repo_url':[]\n",
+    "        }\n",
+    "    \n",
+    "    # Get repo info\n",
+    "    for i in range (len(repo_tags)):\n",
+    "        repo_info = get_rep_info(repo_tags[i], star_tags[i])\n",
+    "        topic_repos_dict['username'].append(repo_info[0])\n",
+    "        topic_repos_dict['repo_name'].append(repo_info[1])\n",
+    "        topic_repos_dict['stars'].append(repo_info[2])\n",
+    "        topic_repos_dict['repo_url'].append(repo_info[3])\n",
+    "    \n",
+    "    return pd.DataFrame(topic_repos_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed07182e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c605a9ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db4a996e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def scrape_topic(topic_url, path):\n",
+    "    if os.path.exists(path): # Checking if a file exists so that it can be skipped and not be re-downloaded \n",
+    "        print(\"The file {} already exists. Skipping...\".format(path))\n",
+    "        return\n",
+    "    topic_df = get_topic_repos(get_topic_page(topic_url))\n",
+    "    topic_df.to_csv(path, index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "419e1089",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06fb2039",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e825c1c8",
+   "metadata": {},
+   "source": [
+    "### Summary \n",
+    "- There is a function that extracts a list of topics\n",
+    "- There is a function that create a CSV that stores scraped data from a topics page\n",
+    "- Let's create a function that puts them together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5f5c5da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scrape_topics_repos():\n",
+    "    print('Scraping list of topics')\n",
+    "    topics_df = scrape_topics()\n",
+    "    #Creating a folder / directory named 'data' to save the scraped files\n",
+    "    os.makedirs('Scraped_data', exist_ok=True)\n",
+    "    for index, row in topics_df.iterrows(): # Iterating over rows \n",
+    "        print('Scraping top repositories for \"{}\"'.format(row['title']))\n",
+    "        scrape_topic(row['url'], 'data/{}.csv'.format(row['title']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d2f9c3a",
+   "metadata": {},
+   "source": [
+    "Let's run it to scrape the top repos for all the topics in the first page of https://github.com/topics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f20d7ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrape_topics_repos()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dd84163",
    "metadata": {},
    "outputs": [],
    "source": []
